--- a/firebaseauth_wrapper_flutter/pubspec.yaml
+++ b/firebaseauth_wrapper_flutter/pubspec.yaml
@@ -8,7 +8,7 @@ dependencies:
     flutter:
         sdk: flutter
     cloud_firestore: ^0.12.6
-    firestore_wrapper:
+    firebaseauth_wrapper:
         git:
             url: https://github.com/paulorobertocruz/firebaseauth_wrapper.git
             path: firebaseauth_wrapper
