use firebase from dev branch

--- a/firebaseauth_wrapper_web/pubspec.yaml
+++ b/firebaseauth_wrapper_web/pubspec.yaml
@@ -4,7 +4,10 @@ description: Simple FirebaseAuth wrapper
 environment:
     sdk: '>=2.0.0 <3.0.0'
 dependencies:
-    firebase: ^5.0.3
+    firebaseauth_wrapper_flutter:
+        git:
+            url: https://github.com/paulorobertocruz/firebaseauth_wrapper.git
+            path: firebaseauth_wrapper_flutter
     firebaseauth_wrapper:
         git:
             url: https://github.com/paulorobertocruz/firebaseauth_wrapper.git
