update pubspec apontando para firebase dev

--- a/firebaseauth_wrapper_web/pubspec.yaml
+++ b/firebaseauth_wrapper_web/pubspec.yaml
@@ -4,7 +4,9 @@ description: Simple FirebaseAuth wrapper
 environment:
     sdk: '>=2.0.0 <3.0.0'
 dependencies:
-    firebase: ^5.0.4
+    firebase:
+        git:
+            url: https://github.com/FirebaseExtended/firebase-dart.git        
     firebaseauth_wrapper:
         git:
             url: https://github.com/paulorobertocruz/firebaseauth_wrapper.git
