--- a/firebaseauth_wrapper_flutter/pubspec.yaml
+++ b/firebaseauth_wrapper_flutter/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
     flutter:
         sdk: flutter
     cloud_firestore: ^0.12.6
+    firebase_auth: ^0.14.0+5
     firebaseauth_wrapper:
         git:
             url: https://github.com/paulorobertocruz/firebaseauth_wrapper.git
