--- a/firebaseauth_wrapper_flutter/pubspec.yaml
+++ b/firebaseauth_wrapper_flutter/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 dependencies:
     flutter:
         sdk: flutter
-    cloud_firestore: ^0.12.6
+    cloud_firestore: ^0.13.0+1
     firebase_auth: ^0.14.0+5
     firebaseauth_wrapper:
         git:
